[package]

name = "http-rs"
version = "0.0.1"
description = "A simple and low level http/https client toolkit"
repository = "https://github.com/phsym/http-rs"
readme = "README.md"
keywords = ["http", "https"]
authors = [ "Pierre-Henri Symoneaux" ]
license = "BSD-3-Clause"

[dependencies]
openssl = "*"

[[bin]]
name = "http-rs"

[lib]
name = "http"
