[package]

name = "http-rs"
version = "0.0.1"
description = "A simple and low level http/https client toolkit"
repository = "https://github.com/phsym/http-rs"
homepage = "http://phsym.github.io/http-rs/"
documentation = "http://phsym.github.io/http-rs/doc/"
readme = "README.md"
keywords = ["http", "https", "client"]
authors = [ "Pierre-Henri Symoneaux" ]
license = "BSD-3-Clause"

[features]
default = ["ssl"]
ssl = ["openssl"]

[dependencies.openssl]
openssl = "*"
optional = true

[[bin]]
name = "http-rs"

[lib]
name = "http"
